Add GetResourceTypes Rest handler
